# cs6120-project

./: .gitignore  .gitmodules  Makefile  README.md  brawn  brawn.opam  dune-project  proposal.md
blog-post/: index.md  notes.txt
lib/: dune
lib/ast/: ast.ml  dune  serialize.ml
lib/codegen/: codegen.ml  dune
lib/parse/: dune  grammar.mly  grammar_alt.mly  tokens.mll
lib/typecheck/: builtins.ml  dune  typecheck.ml
runtime/: Makefile  brawn_runtime.cc  brawn_runtime.h  brawn_variables.h  json_to_cpp.cpp  yo.json
runtime/json/include/nlohmann/: adl_serializer.hpp  json.hpp
runtime/json/include/nlohmann/detail/conversions/: from_json.hpp
test/: codegen.ml  codegen2.ml  dune  test_parsing.ml
test/benchmarks/: Catch-22.txt  all_train_head.csv  averages.csv  awksed.awk  dupword.awk  dupword.brawn  dupword.out  dupword_test.txt  f1.awk  f1.brawn  f2.awk  f2.brawn  f3.awk  f3.brawn  fx.csv  hi.txt  hist.txt  histsort.awk  histsort.out  label.txt  labels.awk  labels.brawn  labels.out  math.awk  math.out  math_awk.time  math_brawn.time  mktime.awk  mktime.brawn  mktime.out  mktime.txt  numbers.tsv  split.awk  split.brawn  toy-counter.awk  toy-counter.brawn  tree_grm_est_head.csv  turnt.toml  word-usage-counts.awk  word-usage-counts.brawn  (+2 more)
test/benchmarks/trash/: cut.awk  wc-test.awk  wc.awk
